Hopefully fixes #164: Bold text looks very blurry on Windows

--- a/src/css/font-faces.scss
+++ b/src/css/font-faces.scss
@@ -10,6 +10,12 @@
 
 @font-face {
     font-family: opensans;
+    font-weight: 700;
+    src: url(assets/fonts/OpenSans-Bold.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: opensans;
     font-weight: 100;
     src: url(assets/fonts/OpenSans-Light.ttf) format('truetype');
 }
